修改帖子样式

--- a/application/forum/view/Forum/preview.html
+++ b/application/forum/view/Forum/preview.html
@@ -1,8 +1,8 @@
 {include file="../application/index/view/header.html"}
-	<div class="form-group" style="text-align:center">
-				<h2>{$info.post_title}</h2>
+	<div class="form-group" style="margin:0 auto;text-align:center;margin-top:40px;width:800px;background-color:white">
+				<h2  style="padding:30px">{$info.post_title}</h2>
 	</div class="form-group">
-	<div class="form-group" style="text-align:center;margin-top:20px">
-				<div>{$info.post_content}</div>
+	<div class="form-group" style="margin:0 auto;margin-top:40px;width:800px;background-color:white" >
+				<div style="padding:30px">{$info.post_content}</div>
 	</div class="form-group">
 {include file="../application/index/view/footer.html"}
