--- a/application/forum/view/Forum/forum.html
+++ b/application/forum/view/Forum/forum.html
@@ -9,12 +9,14 @@
 			<th>类型</th>
 			<th>贴子标题</th>
 			<th>操作</th>
+			<th>浏览次数</th>
 		</tr>
 		{volist name = 'post_list' id = 'info'}
 		<tr>
 			<td>{$info.cat_name}</td>
 			<td>{$info.post_title}</td>
 			<td><a href="{:url('preview',['post_id'=>$info.post_id])}" class="btn btn-info" target="_blank">查看</a></td>
+			<td>{$info.post_heat}</td>
 		</tr>
 		{/volist}
 	</table>
