--- a/application/index/view/question_bank/update.html
+++ b/application/index/view/question_bank/update.html
@@ -23,3 +23,8 @@
 
 
 {include file="footer"}
+<script src="_PUBLIC_/static/index/js/question.js" type="text/javascript"></script>
+<script>
+    //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
+    $('#questionBank').addClass("active");
+</script>
