--- a/application/admin/view/course/course_list.html
+++ b/application/admin/view/course/course_list.html
@@ -1,9 +1,8 @@
 {include file="header"}
-
 <div class="container">
 	<div>
 		<h2>课程列表</h2>
-		
+		<a href="{:url('add')}" class="btn btn-success">添加课程</a>
 <br>
 	</div>
 	<table class="table table-hover">
@@ -13,23 +12,17 @@
 			<th>课程名称</th>
 			<th>教师</th>
 			<th>开课时间</th>
-			<th>操作</th>
+			
 		</tr>
-
 		{foreach $course_list as $info}
-
 		<tr>
 			<td>{$info.c_id}</td>
 			<td><img src="http://localhost/niuke/public/uploads/{$info.course_thumb}" width="200" height="144"></td>
 			<td>{$info.course_name}</td>
 			<td>{$info.course_teacher}</td>
 			<td>{$info.c_create_time}</td>
-
-			<script src="_PUBLIC_/static/index/js/question.js" type="text/javascript"></script>
-			<td><a href="{:url('../public/index/course_java/coursejava')}" class="btn btn-info" target="_blank">进入课程</a></td>
 		</tr>
 		{/foreach}
-		</for>
 	</table>
 </div>
 {include file="footer"}
