--- a/application/index/view/course/course.html
+++ b/application/index/view/course/course.html
@@ -3,7 +3,7 @@
 <div class="container">
 	<div>
 		<h2>课程列表</h2>
-		
+		<a href="{:url('../public/index.php/admin/course/course_list')}" class="btn btn-info" target="_blank">管理课程</a>
 <br>
 	</div>
 	<table class="table table-hover">
